# play

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  main.c  play.c
